--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div class="row">
         <header class="col bg-secondary text-white p-2 mb-4">
-          <h3>JNL 221: Unemployment Map</h3>
+          <h3>JNL 221: Median Salary By Gender</h3>
         </header>
       </div>
 
@@ -24,7 +24,8 @@
         <div class="col-lg-7">
 
           <!-- PLACE YOUR DATAWRAPPER <iframe> DIRECTLY UNDERNEATH ME! -->
-
+    <iframe title="Gender Pay Gap" aria-label="Grouped Bars" id="datawrapper-chart-tovCy" src="https://datawrapper.dwcdn.net/tovCy/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="620" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+</script>
 
           
           <!-- PLACE YOUR DATAWRAPPER <iframe> ABOVE ME!-->
